Added serial port and simple demo in main
To be used with the "theAirC/serial" repository, a slightly modified
fork of "wjwwood/serial".
This ("UTREX_Link") and the "serial" repository must be in the same
directory.

--- a/UTREX_Link/CodeBlocks/UTREX_Link.cbp
+++ b/UTREX_Link/CodeBlocks/UTREX_Link.cbp
@@ -38,6 +38,7 @@
 			<Add option="-lmingw32 -lSDL2main -lSDL2" />
 			<Add directory="SDL/lib" />
 		</Linker>
+		<Unit filename="../../../serial/src/Serial.cpp" />
 		<Unit filename="../BuildMe.cpp" />
 		<Unit filename="../Core/Canonical.h" />
 		<Unit filename="../Core/Curve.cpp">
