--- a/UTREX_Link/VisualStudio/UTREX_Link.vcxproj.filters
+++ b/UTREX_Link/VisualStudio/UTREX_Link.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="..\BuildMe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\serial\src\Serial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
