--- a/UTREX_Link/VisualStudio/UTREX_Link.vcxproj
+++ b/UTREX_Link/VisualStudio/UTREX_Link.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\serial\src\Serial.cpp" />
     <ClCompile Include="..\BuildMe.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
